# rmxp-player

./: .gitignore  Cargo.toml  MVP.md  PROGRESS.md  README.md  config-test.xt  index.html  package-lock.json  package.json
.cargo/: config.toml
apps/desktop-runner/: Cargo.toml
apps/desktop-runner/src/: main.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs  model.rs  reader.rs  types.rs  writer.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: game.rs  input.rs  lib.rs  project.rs
crates/mobile-shell/: Cargo.toml
crates/mobile-shell/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/rgss-bindings/: Cargo.toml  build.rs
crates/rgss-bindings/src/: audio.rs  fs.rs  graphics.rs  input.rs  kernel.rs  lib.rs  runtime.rs  scripts.rs  system.rs
crates/rgss-bindings/src/classes/: bitmap.rs  color.rs  common.rs  font.rs  mod.rs  plane.rs  rect.rs  sprite.rs  table.rs  tilemap.rs  tone.rs  viewport.rs  window.rs
crates/rgss-bindings/src/native/: bitmap.rs  font.rs  handles.rs  interpreter.rs  mod.rs  module.rs  plane.rs  sprite.rs  tilemap.rs  types.rs  util.rs  viewport.rs  window.rs
crates/rgss-bindings/src/ruby/: primitives.rb
crates/rgss-bindings/src/ruby/preload/: classic.rb  mkxp_wrap.rb  module_rpg1.rb  win32.rb
docs/: rgss-native-bindings.md  rgss-parity-tracker.md
src/: App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  mod.rs
src-tauri/src/marshal/: mod.rs  reader.rs  types.rs  writer.rs
src/utils/: Table.ts
