[workspace]
members = [
    "crates/engine-core",
    "crates/rgss-bindings",
    "crates/render",
    "crates/audio",
    "crates/platform",
    "crates/mobile-shell",
    "crates/data",
    "apps/desktop-runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
description = "Lightweight native RMXP player built with Rust"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
winit = "0.29"
pixels = "0.15"
winit_input_helper = "0.15"
rodio = { version = "0.19", features = ["mp3", "vorbis", "wav", "flac"] }
cpal = "0.15"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
