[package]
name = "rmxp-player"
version = "0.1.0"
edition = "2021"
description = "A modern RPG Maker XP player using Tauri + PixiJS"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
flate2 = "1"
image = "0.25"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
rodio = { version = "0.19", features = ["mp3", "vorbis", "wav", "flac"] }
log = "0.4"
env_logger = "0.11"
rustysynth = "1.3.6"
midly = "0.5.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "rmxp_player_lib"
crate-type = ["lib", "cdylib", "staticlib"]
