[package]
name = "platform"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
dirs = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
